; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_fault.c_vm_fault_copy_cleanup.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_fault.c_vm_fault_copy_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @vm_fault_copy_cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vm_fault_copy_cleanup(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @VM_PAGE_OBJECT(i32 %6)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @vm_object_lock(i32 %8)
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @PAGE_WAKEUP_DONE(i32 %10)
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @VM_PAGE_PAGEABLE(i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %25, label %15

15:                                               ; preds = %2
  %16 = call i32 (...) @vm_page_lockspin_queues()
  %17 = load i32, i32* %3, align 4
  %18 = call i32 @VM_PAGE_PAGEABLE(i32 %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %15
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @vm_page_activate(i32 %21)
  br label %23

23:                                               ; preds = %20, %15
  %24 = call i32 (...) @vm_page_unlock_queues()
  br label %25

25:                                               ; preds = %23, %2
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @vm_fault_cleanup(i32 %26, i32 %27)
  ret void
}

declare dso_local i32 @VM_PAGE_OBJECT(i32) #1

declare dso_local i32 @vm_object_lock(i32) #1

declare dso_local i32 @PAGE_WAKEUP_DONE(i32) #1

declare dso_local i32 @VM_PAGE_PAGEABLE(i32) #1

declare dso_local i32 @vm_page_lockspin_queues(...) #1

declare dso_local i32 @vm_page_activate(i32) #1

declare dso_local i32 @vm_page_unlock_queues(...) #1

declare dso_local i32 @vm_fault_cleanup(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
